--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ input[type=submit]:hover {
           <label for="normal-ecom">Which mass E-Commerce platform do you use?</label>
         </div>
         <div class="col-75">
-          <select id="10m-service" name="10m-service">
+          <select id="normal-ecom" name="normal-ecom">
             <option value="Zepto">Amazon</option>
             <option value="Grofers">Flipkart</option>
             <option value="Snapdeal">Snapdeal</option>
